# py-iddas-query

./: Makefile  README.md  pyproject.toml
fecatq/: __main__.py
fecatq/query/: describe.sparql  wms.sparql
